--- a/src/modules/todo-app/todo-app.html
+++ b/src/modules/todo-app/todo-app.html
@@ -1,5 +1,5 @@
 <div class="todo-list" data-module-init="todo-app" data-app>
-  <test data-vue>
+  <todo-app data-vue>
 
-  </test>
+  </todo-app>
 </div>
