--- a/src/modules/todo-app/todo-app.html
+++ b/src/modules/todo-app/todo-app.html
@@ -1,4 +1,4 @@
-<div class="todo-list" is="todo-app" data-app>
+<div class="todo-list" is="todo-app" data-app id="app">
   <todo-app data-vue>
 
   </todo-app>
